# client-intelligence

./: .gitignore
backend/: README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/prompts/: system_prompt.md
backend/app/routes/: analyze.py
backend/app/schemas/: response_schema.py  schema.json
backend/app/services/: llm.py  parser.py  validator.py
frontend/: .gitignore
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: DayLogGrid.jsx  FindingCard.jsx  Legend.jsx  ReportView.jsx  StatusBanner.jsx  Tabs.jsx  TranscriptPanel.jsx
frontend/src/data/: sampleConversation.js
