[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "google-genai>=2.12.1",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
